add email column for users (not currently accessible)

--- a/kyberkucharka-frontend/src/styles/buttons.css
+++ b/kyberkucharka-frontend/src/styles/buttons.css
@@ -24,7 +24,7 @@
   padding-top: 12px;
 }
 
-.kyberbutton-white:disabled {
+.kyberbutton:disabled, .kyberbutton-white:disabled {
   color: gray;
 }
 
