--- a/kyberkucharka-frontend/src/styles/register.css
+++ b/kyberkucharka-frontend/src/styles/register.css
@@ -1,4 +1,4 @@
-.register input[type="text"], .register input[type="password"] {
+.register input[type="text"], .register input[type="password"], .register input[type="email"] {
     /* background-color: rgba(255, 255, 255, 0.096); */
     width: calc(55vw * var(--main-recipe-size));
     font-style: italic;
