--- a/kyberkucharka-frontend/src/styles/index.css
+++ b/kyberkucharka-frontend/src/styles/index.css
@@ -143,6 +143,10 @@ nav * {
   font-weight: bold;
 }
 
+.links div * {
+  margin: 0 5px;
+}
+
 .userpage-link * {
   font-size: 24px;
   display: inline-flex;
@@ -224,6 +228,39 @@ td {
 
 .react-tooltip {
   z-index: 10;
+}
+
+.plus-button{
+  background:url("/plus.png") no-repeat; 
+  background-size: 50px 50px;
+
+  cursor:pointer;
+  border:none;
+  width:50px;
+  height:50px;
+}
+
+.plus-button:hover {
+  transform: rotate(5deg) scale(1.05);
+}
+
+.new-tag-form {
+  margin: auto;
+  max-width: 80vw;
+  align-items: center;
+  font-size: larger;
+
+  margin-bottom: 20px;
+}
+
+.new-tag-form * {
+  margin: 0px 20px;
+  align-self: center;
+}
+
+#new-tag-name, #new-tag-label {
+  font-size: larger;
+  font-family: inherit;
 }
 
 @media only screen and (max-width: 1500px) {
