--- a/kyberkucharka-frontend/src/styles/search.css
+++ b/kyberkucharka-frontend/src/styles/search.css
@@ -1,5 +1,3 @@
-
-
 .search-settings {
   display: flex;
   flex-direction: column;
@@ -8,7 +6,7 @@
   text-align: center;
 }
 
-.search-page form {
+.grid-div {
   display: grid;
   grid-template-columns: auto auto;
 }
@@ -21,10 +19,13 @@
   justify-content: center;
 } */
 
-.search-page form > * {
-  margin: 5px 10px;
+.search-settings * {
   font-size: 24px;
   font-family: KyberFontSimple;
+}
+
+.grid-div > * {
+  margin: 5px 10px;
 } 
 
 .search-page label {
@@ -32,7 +33,7 @@
   margin: auto 0;
 }
 
-.search-page input {
+.search-page input[type=text] {
   background-color: white;
   color: #1a1a1a;
   border: none;
@@ -45,15 +46,38 @@
 }
 
 .search-select {
-
   justify-self: left;
   min-width: 350px;
-
 }
 
+.search-settings fieldset {
+  margin: auto;
+  max-width: 90vw;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.search-settings fieldset > * {
+  margin-right: 10px;
+} 
+
+
 @media only screen and (max-width: 800px) {
-  .search-page form {
+  .grid-div {
     display: flex;
     flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .search-page input[type=text] {
+    min-width: 250px;
+  }
+
+  .search-select {
+    min-width: 250px;
   }
 }
